# sourdough

datagrump/: Makefile.am  controller-aimd.cc  controller-aimd.hh  controller-contest.cc  controller-contest.hh  controller-delay.cc  controller-delay.hh  controller-original.cc  controller.hh  sender.cc
datagrump/charts/: delay_window_size  delay_window_size_2  delay_winsize.gnuplot
datagrump/exercise_1/: README  exercise_1.data  exercise_1.input.gnuplot  exercise_1.input.gnuplot.template  exercise_1.latex  exercise_1.sh
